--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
 
                 </div>
             </div>
+            <div class="lmore">
+                <a href="#" id="lmore">Load More</a>
+            </div>
         </div>
     </section>
 
