--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section class="portfolio" id="portfolio">
         <div class="max-width">
-            <h2 class="title">My Work</h2>
+            <h2 class="title"><b>MY WORK</b></h2>
             <div class="p-content">
 
                 <div class="image">
@@ -144,9 +144,9 @@
         </div>
     </section>
 
-    <section class="about" id="about">
+    <section style="background-color: #F3ECE2;" class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About Me</h2>
+            <h2 class="title"><b>ABOUT ME</b></h2>
             <div class="about-content">
                 <div class="column left">
                     <img src="./images/olgica.gif">
@@ -165,7 +165,7 @@
 
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">What I do</h2>
+            <h2 class="title"><b>WHAT I DO</b></h2>
             <div class="services-content">
                 <div class="card">
                     <div class="box">
@@ -199,7 +199,7 @@
 
     <section class="contact" id="contact">
         <div class="max-width">
-            <h2 class="title">Contact Me</h2>
+            <h2 class="title"><b>CONTACT ME</b></h2>
             <div class="contact-content">
                 <div class="column-left">
                     <div class="text">Let's connect!</div>
